# flexiv_rdk_csharp

./: .gitignore  CMakeLists.txt  FlexivRdk.sln  FlexivRobotDll.sln  README.md  build_and_install_flexiv_rdk_dll.sh
.github/workflows/: build.yml
FlexivRdkCSharp/: FlexivRdkCSharp.csproj  Program.cs
FlexivRdkCSharp/Examples/: Basics1DisplayRobotStates.cs  Basics2ClearFault.cs  Basics3PrimitiveExecution.cs  Basics4PlanExecution.cs  Basics5ZeroFTSensor.cs  Basics6GripperControl.cs  Basics7AutoRecovery.cs  Basics8UpdateRobotTool.cs  Basics9GlobalVariables.cs  Intermed1NRTJntPosCtrl.cs  Intermed2NRTJntImpCtrl.cs  Intermed3NRTCartPureMotionCtrl.cs  Intermed4NRTCartMotionForceCtrl.cs
FlexivRdkCSharp/FlexivRdk/: Data.cs  Device.cs  FileIO.cs  Gripper.cs  Native.cs  Robot.cs  Tool.cs  Utility.cs  WorkCoord.cs
FlexivRdkDll/: FlexivRdkDll.vcxproj  FlexivRdkDll.vcxproj.filters  cpp.hint  exported_api.cpp  internal_utils.hpp
FlexivRobotCSharp/: FlexivRobotCSharp.csproj  Program.cs
FlexivRobotCSharp/Examples/: basic1_display_robot_states.cs  basic2_clear_fault.cs  basic3_primitive_execution.cs  basic4_plan_execution.cs  basic5_zero_force_torque_sensors.cs  basic6_auto_recovery.cs  basic7_update_robot_tool.cs
FlexivRobotCSharp/FlexivRdk/: Data.cs  Primitive.cs  Robot.cs  Utility.cs
FlexivRobotDll/: FlexivRobotDll.cpp  FlexivRobotDll.vcxproj  FlexivRobotDll.vcxproj.filters
cpp_wrapper/: CMakeLists.txt
cpp_wrapper/include/: wrapper_api.hpp
cpp_wrapper/src/: wrapper_api.cpp
csharp/: Program.cs  csharp.csproj  csharp.sln
csharp/Examples/: Basics1DisplayRobotStates.cs  Basics2ClearFault.cs  Basics3PrimitiveExecution.cs  Basics4PlanExecution.cs  Basics5ZeroFTSensor.cs  Basics6GripperControl.cs  Basics7AutoRecovery.cs  Basics8UpdateRobotTool.cs  Basics9GlobalVariables.cs  IExample.cs  Intermed1NRTJntPosCtrl.cs  (+4 more)
(+12 files in other folders)
